# newpodcaster

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  samconfig.toml.example  template.yaml
.github/workflows/: deploy-lambda.yml
docs/superpowers/plans/: 2026-05-28-newpodcaster.md
docs/superpowers/specs/: 2026-05-28-newpodcaster-design.md
src/: requirements.txt
src/generator/: config.py  dialog.py  extractor.py  feed_discovery.py  handler.py  storage.py  tts.py  types.py
tests/: conftest.py  test_config.py  test_dialog.py  test_extractor.py  test_feed_discovery.py  test_handler.py  test_handler_integration.py  test_storage.py  test_tts.py
tests/fixtures/: bbc_arsenal.rss  bbc_article.html  bbc_european.rss
