[project]
name = "newpodcaster"
version = "0.1.0"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# The viewer embeds CDN URLs inside HTML strings that can't be wrapped without
# breaking the markup; allow long lines specifically in app.py.
"app.py" = ["E501"]
